syntax = "proto3";

package tencent.user.name;

// The greeting service definition.
service NameService {
  // Sends a greeting
  rpc AddName (AddNameRequest) returns (AddNameResponse) {}
}

message AddNameRequest {
    string name = 1;
}

message AddNameResponse {
    string name = 1;
}

