syntax = "proto3";

package tencent.user.age;

// The greeting service definition.
service AgeService {
  // Sends a greeting
  rpc AddAge (AddAgeRequest) returns (AddAgeResponse) {}
}

message AddAgeRequest {
    string age = 1;
}

message AddAgeResponse {
    string age = 1;
}

